src/objects/actionHub__RuleConditions__c.object
<CustomObject>
    <description>actionHub Rule Conditions</description>
    <fields>
        <fullName>actionHub__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>actionHub__ComparisonOperator__c</fullName>
        <label>Comparison Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>is equal to</fullName>
                </value>
                <value>
                    <fullName>is not equal to</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>is less than</fullName>
                </value>
                <value>
                    <fullName>is less than or equal to</fullName>
                </value>
                <value>
                    <fullName>is more than</fullName>
                </value>
                <value>
                    <fullName>is more than or equal to</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>actionHub__DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>actionHub__LeftExpression__c</fullName>
        <label>Left Expression</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>actionHub__LogicalOperator__c</fullName>
        <label>Logical Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
                <value>
                    <fullName>NONE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>actionHub__RightExpression__c</fullName>
        <label>Right Expression</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>actionHub__RuleId__c</fullName>
        <label>Rule Id</label>
        <referenceTo>actionHub__Rules__c</referenceTo>
        <relationshipLabel>Rule Conditions</relationshipLabel>
        <relationshipName>Rule_Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>actionHub__RuleName__c</fullName>
        <formula>actionHub__RuleId__r.actionHub__RuleName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__SourceConnection__c</fullName>
        <formula>actionHub__RuleId__r.actionHub__SourceConnectionName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Connection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__SourceObjectAPIName__c</fullName>
        <formula>actionHub__RuleId__r.actionHub__SourceObjectAPIName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Object API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__SourceObjectDisplayName__c</fullName>
        <formula>actionHub__RuleId__r.actionHub__SourceObjectDisplayName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Object</label>
        <type>Text</type>
    </fields>
    <label>Rule Conditions</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Condition Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>